docs/api/qiskit/0.19/ibmq_credentials.mdx
---
title: credentials (v0.19)
description: API reference for qiskit.providers.ibmq.credentials in qiskit v0.19
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.providers.ibmq.credentials
---

<span id="module-qiskit.providers.ibmq.credentials" />

<span id="qiskit-providers-ibmq-credentials" />

<span id="credentials-qiskit-providers-ibmq-credentials" />

# Credentials

`qiskit.providers.ibmq.credentials`

Utilities for working with IBM Quantum Experience account credentials.

## Classes

|                                                                                                                                                   |                                             |
| ------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
| [`Credentials`](qiskit.providers.ibmq.credentials.Credentials "qiskit.providers.ibmq.credentials.Credentials")(token, url\[, websockets\_url, …]) | IBM Quantum Experience account credentials. |

## Exceptions

|                                                                                                                                                                                 |                                                              |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------ |
| [`CredentialsError`](qiskit.providers.ibmq.credentials.CredentialsError "qiskit.providers.ibmq.credentials.CredentialsError")(\*message)                                        | Base class for errors raised during credential management.   |
| [`InvalidCredentialsFormatError`](qiskit.providers.ibmq.credentials.InvalidCredentialsFormatError "qiskit.providers.ibmq.credentials.InvalidCredentialsFormatError")(\*message) | Errors raised when the credentials are in an invalid format. |
| [`CredentialsNotFoundError`](qiskit.providers.ibmq.credentials.CredentialsNotFoundError "qiskit.providers.ibmq.credentials.CredentialsNotFoundError")(\*message)                | Errors raised when the credentials are not found.            |

